@@ -71,6 +71,7 @@ then
 	rm ~/checkout/OneLife/server/mapDummyRecall.txt
 	rm ~/checkout/OneLife/server/lastEveLocation.txt
 	rm ~/checkout/OneLife/server/biomeRandSeed.txt
+	rm ~/checkout/OneLife/server/landingLocations.txt
 
 	echo "0,0" > ~/checkout/OneLife/server/shutdownLongLineagePos.txt
 fi
